# lux-s3-public

./: .gitignore  LICENSE  README.md  cleanup.sh  pyproject.toml  requirements.txt
all_opponents/oneliner/: main.py  wrapper.py
all_opponents/oneliner/rl_agent/: agent.py  constants.py  network.py  specs.py  types.py
configs/arch/: _base.yaml  mono.yaml  quicktest.yaml
configs/checkpointer/: default.yaml
configs/env/: _shared_env.yaml  medium_monofield_96.yaml  shallow_duomofield_96.yaml  shallow_monofield_96.yaml
configs/env/agent/: _shared_agent.yaml
configs/env/reward/: _base_reward.yaml  balanced.yaml  intermediate_tweaked.yaml  starter.yaml  zerosum.yaml
configs/loader/: default.yaml
configs/logger/: default.yaml
configs/main/: main_ff_ppo.yaml
configs/opponents/: _shared_opponents.yaml  custom.yaml  selfplay.yaml  single.yaml
configs/run/: default.yaml
configs/system/: ff_ppo.yaml
environment/: make_env.py  oneplayerenv.py
player/: main.py  wrapper.py
player/rl_agent/: agent.py  constants.py  flipping.py  network.py  types.py
player/rl_agent/memory/: energy_fields.py  energy_fields_opt.py  memory_dataclass.py  memory_jax.py
player/rl_agent/network_input/: get_fields.py  get_inputs.py  get_scalars.py  types.py
player/rl_agent/network_utils/: blocks_base.py  blocks_convnext.py  blocks_embedding.py  blocks_resnet.py  blocks_resnet_stoix.py  distributions.py  head_discrete_and_field.py  head_discrete_full.py  head_discrete_sparse.py  head_duofield.py  head_duomofield.py  head_monofield.py  head_unit_subheads.py  (+6 more)
scripts/: ff_ppo.py
(+11 files in other folders)
